--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
             aria-label="Voltar ao topo">
         <i class="fas fa-arrow-up"></i>
     </button>
-@@ -392,28 +644,58 @@
+<script>
             }
         });
 
@@ -734,3 +734,4 @@
                 }
             });
         });
+</script>
