--- a/index.html
+++ b/index.html
@@ -302,23 +302,24 @@
                 </div>
                 
                 <!-- Right Column - Impact Number -->
-                <div class="lg:w-1/3 mt-12 lg:mt-0 flex flex-col items-center justify-center bg-white/20 backdrop-blur-sm rounded-xl p-8 border border-white/30 card-shadow-lg">
-                    <div class="text-center">
-                        <p class="text-xl md:text-2xl text-white mb-2 font-medium">Mais de</p>
-                        <div class="highlight-number mb-2 text-6xl md:text-8xl font-bold text-white" id="impact-counter">0</div>
-                        <p class="text-xl md:text-2xl text-white font-medium">Estudantes Impactados</p>
+              <div class="w-auto mx-auto mt-12 lg:mt-0 lg:w-1/3 flex flex-col items-center justify-center bg-white/20 backdrop-blur-sm rounded-xl p-8 border border-white/30 card-shadow-lg">
+                <div class="text-center">
+                     <p class="text-xl md:text-2xl text-white mb-2 font-medium">Mais de</p>
+                 <div class="highlight-number mb-2 text-6xl md:text-8xl font-bold text-white" id="impact-counter">0</div>
+                       <p class="text-xl md:text-2xl text-white font-medium">Estudantes Impactados</p>
+                      </div>
+                 <div class="mt-8 grid grid-cols-2 gap-4 w-full">
+                  <div class="bg-white/20 backdrop-blur-sm rounded-lg p-4 text-center border border-white/30 card-shadow">
+                    <p class="text-3xl font-bold text-white">4</p>
+                    <p class="text-white">Escolas</p>
                     </div>
-                    
-                    <div class="mt-8 grid grid-cols-2 gap-4 w-full">
-                        <div class="bg-white/20 backdrop-blur-sm rounded-lg p-4 text-center border border-white/30 card-shadow">
-                            <p class="text-3xl font-bold text-white">4</p>
-                            <p class="text-white">Escolas</p>
-                        </div>
-                        <div class="bg-white/20 backdrop-blur-sm rounded-lg p-4 text-center border border-white/30 card-shadow">
+                <div class="bg-white/20 backdrop-blur-sm rounded-lg p-4 text-center border border-white/30 card-shadow">
                             <p class="text-3xl font-bold text-white">12</p>
                             <p class="text-white">Cursos</p>
-                        </div>
-                    </div>
+        </div>
+    </div>
+</div>
+
                 </div>
             </div>
         </div>
