--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
                 </div>
             </div>
             
-            <div class="mt-16 bg-gradient-to-br from-[#002855]/90 to-[#6A5ACD]/90 text-white p-8 rounded-xl card-shadow-lg backdrop-blur-sm border border-white/20">
-                <h3 class="text-2xl font-bold mb-4">Como Participar</h3>
+            <div id="register" class="mt-16 bg-gradient-to-br from-[#002855]/90 to-[#6A5ACD]/90 text-white p-8 rounded-xl card-shadow-lg backdrop-blur-sm border border-white/20">
+    <h3 class="text-2xl font-bold mb-4">Como Participar</h3>
                 <p class="mb-6">A Olimpíada Brasileira de Estatística é aberta a estudantes regularmente matriculados em todas as séries do ensino médio.</p>
                 
                 <div class="grid md:grid-cols-3 gap-6">
