--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-xl mr-3 mt-1"></i>
-                                <span>É uma escola da cidade de São Carlos</span>
+                                <span>Escola Pública da cidade de São Carlos</span>
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-xl mr-3 mt-1"></i>
