Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
                 <p class="text-xl md:text-2xl mb-8 font-light text-[#CCCCFF]">USP - São Carlos</p>
                 <p class="text-lg mb-10 leading-relaxed text-white/90">Promovendo o ensino da estatística e ciência de dados para estudantes de todo o Brasil.</p>
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
-                    <a href="#register" class="bg-gradient-to-r from-[#0072CE] to-[#40E0D0] text-white px-8 py-3 rounded-full font-bold text-center btn-hover glow-effect">
-                        Se inscreva aqui
+                    <a href="#contact" class="bg-gradient-to-r from-[#0072CE] to-[#40E0D0] text-white px-8 py-3 rounded-full font-bold text-center btn-hover glow-effect">
+                        Contate-nos!
                     </a>
                     <a href="#about" class="bg-white/90 text-[#002855] px-8 py-3 rounded-full font-bold text-center btn-hover border border-[#002855]/20">
                         Saiba mais
