--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         A Olimpíada Brasileira de Estatística (OBE) é a primeira olimpíada de estatística das Américas, voltada para estudantes do ensino médio e técnico de todo o Brasil. Mais do que uma competição, ela é um movimento que transforma a relação dos jovens com os dados, desenvolvendo habilidades essenciais para o século XXI.
                     </p>
                     <p class="mt-4 text-lg text-[#002855] max-w-4xl mx-auto leading-relaxed">
-                        Nosso propósito vai além das provas: queremos formar cidadãos capazes de interpretar criticamente a realidade através dos números. A estatística é apresentada não como uma disciplina isolada, mas como uma ferramenta poderosa para entender e transformar o mundo – desde questões locais até desafios globais.
+                        Nosso propósito vai além das provas: queremos formar cidadãos capazes de interpretar criticamente a realidade através dos números. A estatística é apresentada não como uma disciplina isolada, mas como uma ferramenta poderosa para entender e transformar o mundo desde questões locais até desafios globais.
                     </p>
                 </div>
 
