--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                                 <li class="flex items-start"><i class="fas fa-clock text-[#40E0D0] w-5 mr-2 mt-1"></i><span><strong>Flexibilidade:</strong> a escola pode escolher qualquer dia desse intervalo para aplicar a prova.</span></li>
                                 <li class="flex items-start"><i class="fas fa-file-alt text-[#40E0D0] w-5 mr-2 mt-1"></i><span><strong>Formato:</strong> Prova presencial de até 2h, com 10 questões de múltipla escolha e 2 discursivas.</span></li>
                                 <li class="flex items-start"><i class="fas fa-book-open text-[#40E0D0] w-5 mr-2 mt-1"></i><span><strong>Conteúdos:</strong> probabilidade, visualização e interpretação de dados.</span></li>
-                                <li class="flex items-start"><i class="fas fa-school text-[#40E0D0] w-5 mr-2 mt-1"></i><span>Aplicação e correção feitas pela própria escola com nosso gabarito.</span></li>
+                                <li class="flex items-start"><i class="fas fa-school text-[#40E0D0] w-5 mr-2 mt-1"></i><span>Aplicação feita pela própria escola.</span></li>
                             </ul>
                         </div>
 
