--- a/index2.html
+++ b/index2.html
@@ -122,8 +122,16 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="bg-gradient-to-b from-white to-light-gray pt-32 pb-20">
-            <div class="container mx-auto px-6 text-center reveal in-view">
+        <section class="relative bg-light-gray pt-32 pb-20 overflow-hidden">
+            <!-- Abstract Shapes Background -->
+            <div aria-hidden="true" class="absolute top-0 left-0 -translate-x-1/3 -translate-y-1/3">
+                <div class="w-[40rem] h-[40rem] rounded-full blur-3xl opacity-40" style="background-color: var(--sky-blue);"></div>
+            </div>
+            <div aria-hidden="true" class="absolute bottom-0 right-0 translate-x-1/3 translate-y-1/3">
+                <div class="w-[40rem] h-[40rem] rounded-full blur-3xl opacity-40" style="background-color: var(--soft-purple);"></div>
+            </div>
+
+            <div class="container relative mx-auto px-6 text-center reveal in-view">
                 <h1 class="text-4xl md:text-5xl font-extrabold text-[#002855] leading-tight">
                     Um Movimento para Transformar a Educação com Dados
                 </h1>
@@ -131,7 +139,7 @@
                     A Olimpíada Brasileira de Estatística (OBE) é a primeira olimpíada de estatística das Américas, voltada para estudantes do ensino médio e técnico de todo o Brasil. Mais do que uma competição, ela é um movimento que transforma a relação dos jovens com os dados, desenvolvendo habilidades essenciais para o século XXI.
                 </p>
                 <p class="mt-4 max-w-4xl mx-auto text-lg text-gray-600">
-                    Nosso propósito vai além das provas: queremos formar cidadãos capazes de interpretar criticamente a realidade através dos números. A estatística é apresentada não como uma disciplina isolada, mas como uma ferramenta poderosa para entender e transformar o mundo desde questões locais até desafios globais.
+                    Nosso propósito vai além das provas: queremos formar cidadãos capazes de interpretar criticamente a realidade através dos números. A estatística é apresentada não como uma disciplina isolada, mas como uma ferramenta poderosa para entender e transformar o mundo – desde questões locais até desafios globais.
                 </p>
                  <div class="mt-10">
                     <a href="#register-form" class="bg-gradient-to-r from-[#0072CE] to-[#40E0D0] text-white px-10 py-4 rounded-full font-bold text-lg btn-hover">
@@ -142,7 +150,7 @@
         </section>
         
         <!-- Detalhes das Fases com Timeline -->
-        <section class="py-20 bg-light-gray">
+        <section class="py-20 bg-white">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16 reveal">
                     <h2 class="text-3xl md:text-4xl font-bold text-[#002855]">As Etapas da Jornada OBE</h2>
@@ -184,7 +192,7 @@
         </section>
 
         <!-- Benefícios Section -->
-        <section class="py-20 bg-white">
+        <section class="py-20 bg-light-gray">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12 reveal">
                     <h2 class="text-3xl md:text-4xl font-bold text-[#002855]">Benefícios para a sua Escola</h2>
@@ -192,7 +200,7 @@
                 </div>
                 <div class="grid md:grid-cols-3 gap-8">
                     <!-- Card Benefício 1 -->
-                    <div class="bg-light-gray p-8 rounded-xl card-shadow-lg text-center benefit-card reveal">
+                    <div class="bg-white p-8 rounded-xl card-shadow-lg text-center benefit-card reveal">
                         <div class="inline-block p-4 bg-gradient-to-br from-[#87CEEB] to-[#40E0D0] rounded-full mb-4">
                             <i class="fas fa-lightbulb text-3xl text-white"></i>
                         </div>
@@ -200,7 +208,7 @@
                         <p class="text-gray-600">Acesso a material didático exclusivo e relatórios de desempenho personalizados para apoiar seus alunos.</p>
                     </div>
                     <!-- Card Benefício 2 -->
-                    <div class="bg-light-gray p-8 rounded-xl card-shadow-lg text-center benefit-card reveal">
+                    <div class="bg-white p-8 rounded-xl card-shadow-lg text-center benefit-card reveal">
                         <div class="inline-block p-4 bg-gradient-to-br from-[#6A5ACD] to-[#87CEEB] rounded-full mb-4">
                             <i class="fas fa-chart-line text-3xl text-white"></i>
                         </div>
@@ -208,7 +216,7 @@
                         <p class="text-gray-600">Contribuição direta para a melhoria de indicadores educacionais importantes, como SAEB e ENEM.</p>
                     </div>
                     <!-- Card Benefício 3 -->
-                    <div class="bg-light-gray p-8 rounded-xl card-shadow-lg text-center benefit-card reveal">
+                    <div class="bg-white p-8 rounded-xl card-shadow-lg text-center benefit-card reveal">
                         <div class="inline-block p-4 bg-gradient-to-br from-[#0072CE] to-[#87CEEB] rounded-full mb-4">
                             <i class="fas fa-university text-3xl text-white"></i>
                         </div>
@@ -228,7 +236,7 @@
                         Ofereça aos seus alunos uma experiência de aprendizado inesquecível e transformadora.
                     </p>
                     <div class="mt-8">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSehV3I7kIZQI9TwWntgoN_u8O4gdiruy7DuDfIRXz-M-zl2JQ/viewform" target="_blank" class="bg-white text-[#0072CE] px-10 md:px-12 py-3 md:py-4 rounded-full font-bold text-lg btn-hover transform hover:scale-105 transition-transform duration-300">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSehV3I7kIZQI9TwWntgoN_u8O4gdiruy7DuDfIRXz-M-zl2JQ/viewform" target="_blank" class="bg-white text-[#0072CE] px-8 md:px-12 py-3 md:py-4 rounded-full font-bold text-lg btn-hover transform hover:scale-105 transition-transform duration-300 inline-block whitespace-nowrap">
                             <i class="fas fa-school mr-2"></i> Inscreva sua Escola
                         </a>
                         <p class="mt-4 text-sm text-white/70">Inscrições abertas até 24 de Agosto</p>
