--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                     </div>
                     <h3 class="text-2xl font-bold text-white mb-4">Sou uma Escola</h3>
                     <p class="text-white/90 mb-6 flex-grow">Leve a Olimpíada Brasileira de Estatística para seus alunos e faça parte deste movimento de transformação educacional.</p>
-                    <a href="index2.html" class="bg-white text-[#002855] px-8 py-3 rounded-full font-bold inline-block btn-hover glow-effect mt-auto">
+                    <a href="inscricao.html" class="bg-white text-[#002855] px-8 py-3 rounded-full font-bold inline-block btn-hover glow-effect mt-auto">
                         Inscrever minha Escola
                     </a>
                 </div>
