--- a/index2.html
+++ b/index2.html
@@ -153,7 +153,7 @@
                     <div class="timeline-item reveal">
                         <div class="timeline-icon"><i class="fas fa-paper-plane"></i></div>
                         <h3 class="text-xl font-bold text-[#002855]">Inscrição das Escolas</h3>
-                        <p class="font-semibold text-[#0072CE] mb-4">Até 24 de Agosto</p>
+                        <p class="font-semibold text-[#0072CE] mb-4">Até 07 de Setembro</p>
                         <p class="mt-2 text-gray-600">O primeiro passo para embarcar nesta jornada. O processo é online, rápido e gratuito para todas as escolas que desejam fazer parte do movimento.</p>
                     </div>
                     <!-- Timeline Item 2: 1ª Fase -->
