--- a/index2.html
+++ b/index2.html
@@ -231,7 +231,7 @@
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSehV3I7kIZQI9TwWntgoN_u8O4gdiruy7DuDfIRXz-M-zl2JQ/viewform" target="_blank" class="bg-white text-[#0072CE] px-8 md:px-12 py-3 md:py-4 rounded-full font-bold text-lg btn-hover transform hover:scale-105 transition-transform duration-300 inline-block whitespace-nowrap">
                             <i class="fas fa-school mr-2"></i> Inscreva sua Escola
                         </a>
-                        <p class="mt-4 text-sm text-white/70">Inscrições abertas até 24 de Agosto</p>
+                        <p class="mt-4 text-sm text-white/70">Inscrições abertas até 07 de Setembro</p>
                     </div>
                 </div>
             </div>
