--- a/index2.html
+++ b/index2.html
@@ -220,22 +220,25 @@
         </section>
 
         <!-- CTA Final Section -->
-        <section id="register-form" class="py-20 bg-light-gray">
-            <div class="container mx-auto px-6">
-                <div class="bg-gradient-to-r from-[#002855] to-[#0072CE] rounded-xl p-8 md:p-12 text-center text-white card-shadow-lg animated-gradient">
-                    <h2 class="text-3xl md:text-4xl font-bold">Garanta o lugar da sua escola neste movimento!</h2>
-                    <p class="mt-4 text-lg text-white/80 max-w-2xl mx-auto">
-                        Ofereça aos seus alunos uma experiência de aprendizado inesquecível e transformadora.
-                    </p>
-                    <div class="mt-8">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSehV3I7kIZQI9TwWntgoN_u8O4gdiruy7DuDfIRXz-M-zl2JQ/viewform" target="_blank" class="bg-white text-[#0072CE] px-8 md:px-12 py-3 md:py-4 rounded-full font-bold text-lg btn-hover transform hover:scale-105 transition-transform duration-300 inline-block whitespace-nowrap">
-                            <i class="fas fa-school mr-2"></i> Inscreva sua Escola
-                        </a>
-                        <p class="mt-4 text-sm text-white/70">Inscrições abertas até 07 de Setembro</p>
-                    </div>
-                </div>
+     <section id="register-form" class="py-20 bg-light-gray">
+    <div class="container mx-auto px-6">
+        <div class="bg-gradient-to-r from-[#002855] to-[#0072CE] rounded-xl p-8 md:p-12 text-center text-white card-shadow-lg animated-gradient">
+            <h2 class="text-3xl md:text-4xl font-bold">Garanta o lugar da sua escola neste movimento!</h2>
+            <p class="mt-4 text-lg text-white/80 max-w-2xl mx-auto">
+                Ofereça aos seus alunos uma experiência de aprendizado inesquecível e transformadora.
+            </p>
+            <div class="mt-8 flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSehV3I7kIZQI9TwWntgoN_u8O4gdiruy7DuDfIRXz-M-zl2JQ/viewform" target="_blank" class="bg-white text-[#0072CE] px-8 md:px-12 py-3 md:py-4 rounded-full font-bold text-lg btn-hover transform hover:scale-105 transition-transform duration-300 inline-block whitespace-nowrap">
+                    <i class="fas fa-school mr-2"></i> Inscreva sua Escola
+                </a>
+                <a href="SEU_LINK_PARA_O_PDF_AQUI" target="_blank" class="bg-transparent border-2 border-white text-white px-8 md:px-12 py-3 md:py-4 rounded-full font-bold text-lg btn-hover transform hover:scale-105 transition-transform duration-300 inline-block whitespace-nowrap">
+                    <i class="fas fa-file-download mr-2"></i> Baixe o Regulamento
+                </a>
             </div>
-        </section>
+            <p class="mt-6 text-sm text-white/70">Inscrições abertas até 07 de Setembro</p>
+        </div>
+    </div>
+</section>
     </main>
 
     <!-- Footer com Contato -->
