--- a/index2.html
+++ b/index2.html
@@ -231,7 +231,7 @@
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSehV3I7kIZQI9TwWntgoN_u8O4gdiruy7DuDfIRXz-M-zl2JQ/viewform" target="_blank" class="bg-white text-[#0072CE] px-8 md:px-12 py-3 md:py-4 rounded-full font-bold text-lg btn-hover transform hover:scale-105 transition-transform duration-300 inline-block whitespace-nowrap">
                     <i class="fas fa-school mr-2"></i> Inscreva sua Escola
                 </a>
-                <a href="SEU_LINK_PARA_O_PDF_AQUI" target="_blank" class="bg-transparent border-2 border-white text-white px-8 md:px-12 py-3 md:py-4 rounded-full font-bold text-lg btn-hover transform hover:scale-105 transition-transform duration-300 inline-block whitespace-nowrap">
+                <a href="https://drive.google.com/file/d/1TxV2wlZR3u3J8zBA_Br-YxUS0tB064ug/view?usp=sharing" target="_blank" class="bg-transparent border-2 border-white text-white px-8 md:px-12 py-3 md:py-4 rounded-full font-bold text-lg btn-hover transform hover:scale-105 transition-transform duration-300 inline-block whitespace-nowrap">
                     <i class="fas fa-file-download mr-2"></i> Baixe o Regulamento
                 </a>
             </div>
