--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                                 <i class="fas fa-envelope text-[#40E0D0] text-xl mr-4 mt-1"></i>
                                 <div>
                                     <p class="font-semibold text-white">E-mail</p>
-                                    <a href="mailto:marketing@obe-org.com.br" class="text-[#40E0D0] hover:underline">marketing@obe-org.com.br</a>
+                                    <a href="mailto:diretoria@obe-org.com.br" class="text-[#40E0D0] hover:underline">diretoria@obe-org.com.br</a>
                                 </div>
                             </div>
                             <div class="flex items-center justify-center">
