--- a/inscricao.html
+++ b/inscricao.html
@@ -252,7 +252,7 @@
                 <div>
                     <h3 class="font-bold text-lg mb-4">Contato</h3>
                     <ul class="space-y-2 text-white/70">
-                        <li><i class="fas fa-envelope fa-fw mr-2"></i><a href="mailto:marketing@obe-org.com.br" class="hover:text-water-green">marketing@obe-org.com.br</a></li>
+                        <li><i class="fas fa-envelope fa-fw mr-2"></i><a href="mailto:diretoria@obe-org.com.br" class="hover:text-water-green">diretoria@obe-org.com.br</a></li>
                         <li><i class="fas fa-map-marker-alt fa-fw mr-2"></i>ICMC-USP, São Carlos - SP</li>
                     </ul>
                 </div>
