--- a/inscricao.html
+++ b/inscricao.html
@@ -100,7 +100,7 @@
                             <a href="https://drive.google.com/file/d/1TxV2wlZR3u3J8zBA_Br-YxUS0tB064ug/view?usp=sharing" target="_blank" class="w-full sm:w-auto bg-[#002855] text-white px-8 py-3 rounded-full font-bold text-lg btn-hover flex items-center justify-center">
                                 <i class="fas fa-file-alt mr-2"></i> Regulamento Geral
                             </a>
-                            <a href="https://drive.google.com/file/d/1XDBOJ5hjfLPO-m-lFYMy2kqcRTFcXvNk/view?usp=sharing" target="_blank" class="w-full sm:w-auto bg-transparent border-2 border-[#002855] text-[#002855] px-8 py-3 rounded-full font-bold text-lg btn-hover flex items-center justify-center">
+                            <a href="https://drive.google.com/file/d/1XDBOJ5hjfLPO-m-lFYMy2kqcRTFcXvNk/view?usp=drive_link" target="_blank" class="w-full sm:w-auto bg-transparent border-2 border-[#002855] text-[#002855] px-8 py-3 rounded-full font-bold text-lg btn-hover flex items-center justify-center">
                                 <i class="fas fa-file-download mr-2"></i> Instruções de Aplicação
                             </a>
                         </div>
@@ -145,7 +145,9 @@
                                         </div>
                                         <p class="mt-4"><strong class="text-gray-900">Anexo:</strong> `[Arquivo da prova já renomeado]`</p>
                                     </div>
-                                    <p class="mt-2 text-red-600 font-semibold text-sm"><i class="fas fa-exclamation-triangle mr-1"></i>E-mails com assuntos fora do padrão não serão processados e podem desclassificar o aluno.</p>
+                                    <p class="mt-4 text-gray-800 font-semibold">Exemplo Visual:</p>
+                                    <img src="https://drive.google.com/uc?id=1FkxejglFvThpWAaJwYXreUOvKxYVlxuj" alt="Exemplo de como o e-mail de envio deve ser formatado" class="mt-2 rounded-lg border-2 border-gray-300 w-full max-w-lg mx-auto">
+                                    <p class="mt-4 text-red-600 font-semibold text-sm"><i class="fas fa-exclamation-triangle mr-1"></i>E-mails com assuntos fora do padrão não serão processados e podem desclassificar o aluno.</p>
                                 </div>
                             </div>
 
@@ -163,6 +165,18 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="acao-final" class="py-20 bg-light-gray">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-3xl font-bold text-[#002855]">Tudo Pronto para Enviar?</h2>
+                <p class="mt-4 max-w-2xl mx-auto text-gray-600">Após seguir todas as instruções, clique no botão abaixo para abrir seu programa de e-mail e começar os envios. Lembre-se de enviar um por vez!</p>
+                <div class="mt-8">
+                    <a href="mailto:ob.estatistica@gmail.com" class="bg-gradient-to-r from-[#16a34a] to-[#15803d] text-white px-10 py-4 rounded-full font-bold text-lg btn-hover inline-block">
+                        <i class="fas fa-paper-plane mr-2"></i> Começar Envios Agora
+                    </a>
                 </div>
             </div>
         </section>
@@ -191,7 +205,7 @@
                 </div>
             </div>
             <div class="border-t border-white/20 mt-8 pt-6 text-center">
-                <p class="text-sm opacity-80">&copy; 2025 Olimpíada Brasileira de Estatística. Apoio: ICMC-USP.</p>
+                <p class="text-sm opacity-80">&copy; 2025 Olimpíada Brasileira de Estatística. Realização: ICMC-USP.</p>
             </div>
         </div>
     </footer>
