--- a/envio.html
+++ b/envio.html
@@ -72,7 +72,7 @@
                 <div class="max-w-4xl mx-auto bg-white p-6 md:p-10 rounded-2xl shadow-2xl border border-slate-200/80">
                     
                     <div class="text-center p-6 bg-slate-50 rounded-xl border border-slate-200 mb-10">
-                        <h3 class="text-2xl font-bold text-[#002855] mb-3">Comece por aqui: Documentos Essenciais</h3>
+                        <h3 class="text-2xl font-bold text-[#002855] mb-3">Documentos Essenciais</h3>
                         <p class="text-slate-600 mb-6">A leitura completa destes documentos é fundamental antes de prosseguir.</p>
                         <div class="flex flex-wrap justify-center items-center gap-4">
                             <a href="https://drive.google.com/file/d/1TxV2wlZR3u3J8zBA_Br-YxUS0tB064ug/view?usp=sharing" target="_blank" class="w-full sm:w-auto bg-[#002855] text-white px-6 py-3 rounded-full font-bold text-base btn flex items-center justify-center shadow-md">
@@ -85,7 +85,7 @@
                     </div>
 
                     <div class="mb-10 text-center">
-                        <h3 class="text-2xl font-bold text-[#002855] mb-4">Período de Aplicação e Envio</h3>
+                        <h3 class="text-2xl font-bold text-[#002855] mb-4">Período de Aplicação</h3>
                         <p class="text-xl font-bold text-[#002855] bg-sky-100 border-l-4 border-sky-500 p-4 rounded-lg inline-block">De 14 a 21 de setembro de 2025</p>
                     </div>
 
