--- a/envio.html
+++ b/envio.html
@@ -125,7 +125,7 @@
                                     </div>
                                     <details class="mt-4 rounded-lg bg-slate-50 p-3 border">
                                         <summary class="cursor-pointer text-sm font-semibold text-[#0072CE] hover:underline">Clique para ver o exemplo visual do e-mail</summary>
-                                        <img src="https://imgur.com/a/OwysVXp" alt="Exemplo de como o e-mail de envio deve ser formatado" class="mt-3 rounded-lg border-2 border-slate-300 w-full max-w-lg">
+                                        <img src="https://i.imgur.com/BZAp3Km.jpeg" alt="Exemplo de como o e-mail de envio deve ser formatado" class="mt-3 rounded-lg border-2 border-slate-300 w-full max-w-lg">
                                     </details>
                                 </div>
                             </li>
