--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Olimpíada Brasileira de Estatística (OBE) - USP São Carlos. Promovendo o ensino da estatística e ciência de dados no Brasil.">
     <title>OBE - Olimpíada Brasileira de Estatística</title>
+    <link rel="icon" type="image/png" href="https://i.imgur.com/0Tr568p.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
