--- a/envio.html
+++ b/envio.html
@@ -74,7 +74,7 @@
                     
                     <div class="mb-10 text-center">
                         <h3 class="text-2xl font-bold text-[#002855] mb-4">Período de Aplicação e Envio</h3>
-                        <p class="text-xl font-bold text-[#002855] bg-sky-100 border-l-4 border-sky-500 p-4 rounded-lg inline-block">De 14 a 21 de setembro de 2025</p>
+                        <p class="text-xl font-bold text-[#002855] bg-sky-100 border-l-4 border-sky-500 p-4 rounded-lg inline-block">De 14 a 30 de setembro de 2025</p>
                     </div>
 
                     <div>
@@ -124,7 +124,7 @@
                                         <div>
                                             <h5 class="font-bold text-slate-800">Prepare o Arquivo</h5>
                                             <ul class="list-disc list-inside mt-1 space-y-1 text-slate-600">
-                                                <li>Digitalize ou fotografe a prova (JPG ou PNG).</li>
+                                                <li>Digitalize ou fotografe a prova (JPG, PNG ou PDF).</li>
                                                 <li><strong class="text-red-600">Regra Crítica:</strong> Renomeie o arquivo usando apenas o número de inscrição do aluno.</li>
                                             </ul>
                                         </div>
