--- a/envio.html
+++ b/envio.html
@@ -94,7 +94,7 @@
                                         <div>
                                             <h5 class="font-bold text-slate-800">Prepare os Arquivos</h5>
                                             <ul class="list-disc list-inside mt-1 space-y-1 text-slate-600">
-                                                <li>Junte todas as imagens das provas (JPG ou PNG) em uma única pasta.</li>
+                                                <li>Junte todas as imagens das provas (JPG, PNG ou PDF) em uma única pasta.</li>
                                                 <li><strong class="text-red-600">Verificação Crítica:</strong> Garanta que CADA imagem na pasta está nomeada apenas com o número de inscrição do aluno.</li>
                                                 <li>Comprima a pasta em um único arquivo <strong>.ZIP</strong>.</li>
                                             </ul>
