--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             --soft-purple: #6A5ACD;
             --sky-blue: #87CEEB;
             --water-green: #40E0D0;
-            --lavender: #CCCCFF;
+            --lavenr: #CCCCFF;
             --white: #FFFFFF;
             --light-gray: #F5F5F5;
             --black: #000000;
@@ -271,7 +271,7 @@
                 <div class="lg:w-1/2 mb-10 lg:mb-0 lg:pr-10">
                     <p class="text-lg mb-6 leading-relaxed text-[#002855]">A Olimpíada Brasileira de Estatística (OBE) é uma iniciativa educacional que acredita no poder transformador da Estatística para a sociedade.</p>
                     <p class="text-lg mb-6 leading-relaxed text-[#002855]">Nosso objetivo é despertar o pensamento crítico, a curiosidade científica e o protagonismo dos estudantes por meio de desafios que conectam dados, cidadania e realidade.</p>
-                    <p class="text-lg leading-relaxed text-[#002855]">Mais do que uma competição, a OBE é um movimento: promovemos a autonomia intelectual, o trabalho em equipe, a inclusão e a criatividade — formando jovens preparados para entender o mundo de forma ética e analítica.</p>
+                    <p class="text-lg leading-relaxed text-[#002855]">Mais do que uma competição, a OBE é um movimento: promovemos a autonomia intelectual, o trabalho em equipe, a inclusão e a criatividade, formando jovens preparados para entender o mundo de forma ética e analítica.</p>
                 </div>
                 <div class="lg:w-1/2 floating">
                     <img src="https://i.imgur.com/0Tr568p.png" 
@@ -419,7 +419,7 @@
                         <i class="fas fa-bullseye text-2xl"></i>
                     </div>
                     <h3 class="text-xl font-bold text-white mb-4 text-center">Missão</h3>
-                    <p class="text-center text-white/90">Fomentar uma educação que vá além delém do conhecimento técnico, contribuindo para a formação de cidadãos responsáveis, éticos e comprometidos com a construção de uma sociedade mais justa.</p>
+                    <p class="text-center text-white/90">Fomentar uma educação que vá além do conhecimento técnico, contribuindo para a formação de cidadãos responsáveis, éticos e comprometidos com a construção de uma sociedade mais justa.</p>
                 </div>
                 
                 <div class="bg-white/20 p-8 rounded-xl card-shadow backdrop-blur-sm border border-white/30">
