--- a/envio.html
+++ b/envio.html
@@ -66,8 +66,10 @@
         <section id="guia-fase1" class="py-20 md:py-24 bg-slate-50">
             <div class="container mx-auto px-4 sm:px-6">
                 <div class="text-center mb-12 md:mb-16">
-                    <h2 class="text-3xl md:text-4xl lg:text-5xl font-extrabold text-[#002855]">Guia Completo para a 1ª Fase</h2>
-                    <p class="mt-4 text-lg text-slate-600 max-w-2xl mx-auto">Siga atentamente as etapas para o sucesso da participação de sua escola.</p>
+                    <h2 class="text-3xl md:text-4xl lg:text-5xl font-extrabold text-[#002855]">Instruções Detalhadas para Envio das Provas – 1ª Fase OBE</h2>
+                    <p class="mt-4 text-lg text-slate-600 max-w-3xl mx-auto bg-yellow-100 border-l-4 border-yellow-500 p-4 rounded-r-lg text-yellow-800">
+                        <strong>Atenção:</strong> O material a ser enviado é a digitalização da <strong>FOLHA DE RESPOSTAS</strong> oficial. É obrigatório enviar a <strong>FRENTE</strong> (com o gabarito) e o <strong>VERSO</strong> (com as dissertativas) de cada aluno.
+                    </p>
                 </div>
                 
                 <div class="max-w-4xl mx-auto bg-white p-6 md:p-10 rounded-2xl shadow-2xl border border-slate-200/80">
@@ -93,10 +95,15 @@
                                         <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-full bg-[#002855] text-white font-bold text-lg">1</div>
                                         <div>
                                             <h5 class="font-bold text-slate-800">Prepare os Arquivos</h5>
-                                            <ul class="list-disc list-inside mt-1 space-y-1 text-slate-600">
-                                                <li>Junte todas as imagens das provas (JPG, PNG ou PDF) em uma única pasta.</li>
-                                                <li><strong class="text-red-600">Verificação Crítica:</strong> Garanta que CADA imagem na pasta está nomeada apenas com o número de inscrição do aluno.</li>
-                                                <li>Comprima a pasta em um único arquivo <strong>.ZIP</strong>.</li>
+                                            <ul class="list-disc list-inside mt-1 space-y-2 text-slate-600">
+                                                <li>Junte os arquivos de todas as Folhas de Resposta (FRENTE e VERSO de cada uma) em uma única pasta. Formatos aceitos: JPG, PNG ou PDF.</li>
+                                                <li><strong class="text-red-600">Verificação Crítica (Nomenclatura):</strong> Garanta que CADA arquivo esteja nomeado seguindo o padrão `[NÚMERO DE INSCRIÇÃO]_[frente ou verso]`.</li>
+                                                <li class="list-none bg-yellow-100 p-2 rounded-md text-sm">
+                                                    <strong>Exemplo:</strong> Para o aluno 12345, você terá dois arquivos na pasta:<br>
+                                                    <code class="font-semibold">12345_frente.pdf</code><br>
+                                                    <code class="font-semibold">12345_verso.pdf</code>
+                                                </li>
+                                                <li>Comprima a pasta inteira em um único arquivo <strong>.ZIP</strong>.</li>
                                             </ul>
                                         </div>
                                     </li>
@@ -107,7 +114,7 @@
                                             <div class="mt-2 p-3 bg-white border-l-4 border-sky-400 rounded-r-lg font-mono text-sm">
                                                 <p><strong>Para:</strong> <code class="bg-slate-200 px-1 rounded">ob.estatistica@gmail.com</code></p>
                                                 <p class="mt-1"><strong>Assunto:</strong> <code class="bg-slate-200 px-1 rounded">[Nome da Escola]</code></p>
-                                                <p class="mt-1"><strong>Corpo:</strong> Informe o nome do professor e a quantidade de provas no anexo.</p>
+                                                <p class="mt-1"><strong>Corpo:</strong> Informe o nome do professor responsável e a quantidade de alunos cujas provas estão no anexo.</p>
                                                 <p class="mt-1"><strong>Anexo:</strong> [Seu arquivo .ZIP]</p>
                                             </div>
                                         </div>
@@ -116,16 +123,19 @@
                             </div>
 
                             <div class="bg-slate-50 border rounded-2xl p-6 md:p-8">
-                                <h4 class="text-2xl font-bold text-slate-800 mb-4">Opção 2: Envio Individual</h4>
-                                <p class="text-slate-600 mb-6">Envie um e-mail separado para cada prova de aluno.</p>
+                                <h4 class="text-2xl font-bold text-slate-800 mb-4">Opção 2: Envio Individual (Um e-mail por aluno)</h4>
+                                <p class="text-slate-600 mb-6">Envie um e-mail separado para cada aluno, contendo os dois arquivos (frente e verso).</p>
                                 <ol class="space-y-6">
                                     <li class="flex items-start gap-4">
                                         <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-full bg-[#002855] text-white font-bold text-lg">1</div>
                                         <div>
-                                            <h5 class="font-bold text-slate-800">Prepare o Arquivo</h5>
-                                            <ul class="list-disc list-inside mt-1 space-y-1 text-slate-600">
-                                                <li>Digitalize ou fotografe a prova (JPG, PNG ou PDF).</li>
-                                                <li><strong class="text-red-600">Regra Crítica:</strong> Renomeie o arquivo usando apenas o número de inscrição do aluno.</li>
+                                            <h5 class="font-bold text-slate-800">Prepare os Arquivos do Aluno</h5>
+                                            <ul class="list-disc list-inside mt-1 space-y-2 text-slate-600">
+                                                <li>Digitalize ou fotografe a FRENTE e o VERSO da Folha de Respostas.</li>
+                                                <li><strong class="text-red-600">Regra Crítica (Nomenclatura):</strong> Renomeie os dois arquivos usando o padrão `[NÚMERO DE INSCRIÇÃO]_[frente ou verso]`.</li>
+                                                 <li class="list-none bg-yellow-100 p-2 rounded-md text-sm">
+                                                    <strong>Exemplo:</strong> Para o aluno 12345, você terá os arquivos <code class="font-semibold">12345_frente.jpg</code> e <code class="font-semibold">12345_verso.jpg</code>.
+                                                </li>
                                             </ul>
                                         </div>
                                     </li>
@@ -135,8 +145,8 @@
                                             <h5 class="font-bold text-slate-800">Envie o E-mail</h5>
                                             <div class="mt-2 p-3 bg-white border-l-4 border-sky-400 rounded-r-lg font-mono text-sm">
                                                 <p><strong>Para:</strong> <code class="bg-slate-200 px-1 rounded">ob.estatistica@gmail.com</code></p>
-                                                <p class="mt-1"><strong>Assunto:</strong> <code class="bg-slate-200 px-1 rounded">[APENAS o número de inscrição do aluno]</code></p>
-                                                <p class="mt-1"><strong>Anexo:</strong> [Arquivo da prova do aluno]</p>
+                                                <p class="mt-1"><strong>Assunto:</strong> <code class="bg-slate-200 px-1 rounded">[APENAS o número de inscrição do aluno]</code> - Ex: 12345</p>
+                                                <p class="mt-1"><strong>Anexo:</strong> Anexe os DOIS arquivos (frente e verso) do aluno.</p>
                                             </div>
                                         </div>
                                     </li>
