--- a/envio.html
+++ b/envio.html
@@ -75,7 +75,7 @@
                 <div class="max-w-4xl mx-auto bg-white p-6 md:p-10 rounded-2xl shadow-2xl border border-slate-200/80">
                     
                     <div class="mb-10 text-center">
-                        <h3 class="text-2xl font-bold text-[#002855] mb-4">Período de Aplicação e Envio</h3>
+                        <h3 class="text-2xl font-bold text-[#002855] mb-4">Período de Envio</h3>
                         <p class="text-xl font-bold text-[#002855] bg-sky-100 border-l-4 border-sky-500 p-4 rounded-lg inline-block">De 14 a 30 de setembro de 2025</p>
                     </div>
 
