--- a/index.html
+++ b/index.html
@@ -376,13 +376,18 @@
 
     <section id="gabarito" class="py-20 bg-slate-100 relative section-hidden">
         <div class="container mx-auto px-4 text-center">
-            <h2 class="text-3xl md:text-4xl font-bold text-[#002855] mb-4">Gabarito Comentado da 1ª Fase</h2>
-            <p class="text-lg text-slate-600 max-w-2xl mx-auto mb-8">
-                O período de envio das provas foi encerrado. Agradecemos a participação de todos! Confira o gabarito comentado oficial da primeira fase.
+            <h2 class="text-3xl md:text-4xl font-bold text-[#002855] mb-4">1ª Fase: Prova e Gabarito Comentado</h2>
+            <p class="text-lg text-slate-600 max-w-2xl mx-auto mb-10">
+                O período de envio das provas foi encerrado. Agradecemos a participação de todos! Confira a prova oficial e o gabarito comentado da primeira fase.
             </p>
-            <a href="https://drive.google.com/file/d/1thY6DW7A3Gva_f6EngrUqCkmkn2RYLpL/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-[#16a34a] to-[#15803d] text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
-                <i class="fas fa-file-alt mr-2"></i> Baixar Gabarito Comentado
-            </a>
+            <div class="flex flex-wrap justify-center items-center gap-4">
+                <a href="https://drive.google.com/file/d/1ercVldBjDDu41UpygEI9cwukDtWOr7pm/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-[#0072CE] to-[#002855] text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
+                    <i class="fas fa-file-pdf mr-2"></i> Baixar Prova Oficial
+                </a>
+                <a href="https://drive.google.com/file/d/1thY6DW7A3Gva_f6EngrUqCkmkn2RYLpL/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-[#16a34a] to-[#15803d] text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
+                    <i class="fas fa-file-alt mr-2"></i> Baixar Gabarito Comentado
+                </a>
+            </div>
         </div>
     </section>
     <section id="register" class="py-20 bg-gradient-to-br from-[#002855] to-[#0072CE] text-white relative section-hidden">
