Adicionar as notas de prova

--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
                 <a href="#about" class="nav-link text-lg font-medium">Quem Somos</a>
                 <a href="#projects" class="nav-link text-lg font-medium">Nossos Projetos</a>
                 <a href="#olympiad" class="nav-link text-lg font-medium">A Olimpíada</a>
-                <a href="#gabarito" class="nav-link text-lg font-medium">Gabarito</a>
+                <a href="#resultados" class="nav-link text-lg font-medium">Resultados</a>
                 <a href="#contact" class="nav-link text-lg font-medium">Contato</a>
             </div>
             
-            <a href="#gabarito" class="hidden md:block bg-gradient-to-r from-[#0072CE] to-[#40E0D0] text-white px-6 py-2 rounded-full font-medium btn-hover glow-effect">
-                Ver Gabarito
+            <a href="#resultados" class="hidden md:block bg-gradient-to-r from-[#0072CE] to-[#40E0D0] text-white px-6 py-2 rounded-full font-medium btn-hover glow-effect">
+                Ver Resultados
             </a>
             
             <button id="mobile-menu-button" class="md:hidden text-[#002855]">
@@ -236,10 +236,10 @@
                 <a href="#about" class="nav-link text-lg font-medium py-2">Quem Somos</a>
                 <a href="#projects" class="nav-link text-lg font-medium py-2">Nossos Projetos</a>
                 <a href="#olympiad" class="nav-link text-lg font-medium py-2">A Olimpíada</a>
-                <a href="#gabarito" class="nav-link text-lg font-medium py-2">Gabarito</a>
+                <a href="#resultados" class="nav-link text-lg font-medium py-2">Resultados</a>
                 <a href="#contact" class="nav-link text-lg font-medium py-2">Contato</a>
-                <a href="#gabarito" class="bg-gradient-to-r from-[#0072CE] to-[#40E0D0] text-white px-6 py-2 rounded-full font-medium text-center btn-hover glow-effect">
-                    Ver Gabarito
+                <a href="#resultados" class="bg-gradient-to-r from-[#0072CE] to-[#40E0D0] text-white px-6 py-2 rounded-full font-medium text-center btn-hover glow-effect">
+                    Ver Resultados
                 </a>
             </div>
         </div>
@@ -252,8 +252,8 @@
                 <p class="text-xl md:text-2xl mb-8 font-light text-[#CCCCFF]">USP - São Carlos</p>
                 <p class="text-lg mb-10 leading-relaxed text-white/90">Promovendo o ensino da estatística e ciência de dados para estudantes de todo o Brasil.</p>
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
-                    <a href="#gabarito" class="bg-gradient-to-r from-[#0072CE] to-[#40E0D0] text-white px-8 py-3 rounded-full font-bold text-center btn-hover glow-effect">
-                        Gabarito da 1ª Fase
+                    <a href="#resultados" class="bg-gradient-to-r from-[#0072CE] to-[#40E0D0] text-white px-8 py-3 rounded-full font-bold text-center btn-hover glow-effect">
+                        Resultados da 1ª Fase
                     </a>
                     <a href="#about" class="bg-white/90 text-[#002855] px-8 py-3 rounded-full font-bold text-center btn-hover border border-[#002855]/20">
                         Saiba mais
@@ -374,17 +374,20 @@
         </div>
     </section>
 
-    <section id="gabarito" class="py-20 bg-slate-100 relative section-hidden">
+    <section id="resultados" class="py-20 bg-slate-100 relative section-hidden">
         <div class="container mx-auto px-4 text-center">
-            <h2 class="text-3xl md:text-4xl font-bold text-[#002855] mb-4">1ª Fase: Prova e Gabarito Comentado</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-[#002855] mb-4">Resultados da 1ª Fase</h2>
             <p class="text-lg text-slate-600 max-w-2xl mx-auto mb-10">
-                O período de envio das provas foi encerrado. Agradecemos a participação de todos! Confira a prova oficial e o gabarito comentado da primeira fase.
+                A primeira fase foi concluída! Confira a lista de classificados, a prova oficial e o gabarito comentado.
             </p>
             <div class="flex flex-wrap justify-center items-center gap-4">
+                <a href="https://drive.google.com/file/d/1TxV2wlZR3u3J8zBA_Br-YxUS0tB064ug/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-amber-500 to-yellow-500 text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
+                    <i class="fas fa-trophy mr-2"></i> Ver Classificados
+                </a>
                 <a href="https://drive.google.com/file/d/1ercVldBjDDu41UpygEI9cwukDtWOr7pm/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-[#0072CE] to-[#002855] text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
                     <i class="fas fa-file-pdf mr-2"></i> Baixar Prova Oficial
                 </a>
-                <a href="https://drive.google.com/file/d/163aPQmnl3BMxUTW3m-4TshICtSiP7HWf/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-[#16a34a] to-[#15803d] text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
+                <a href="https://drive.google.com/file/d/1thY6DW7A3Gva_f6EngrUqCkmkn2RYLpL/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-[#16a34a] to-[#15803d] text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
                     <i class="fas fa-file-alt mr-2"></i> Baixar Gabarito Comentado
                 </a>
             </div>
@@ -417,8 +420,8 @@
                     </div>
                     <h3 class="text-2xl font-bold text-white mb-4">Sou uma Escola</h3>
                     <p class="text-white/90 mb-6 flex-grow">Acompanhe os resultados e prepare-se para as próximas edições da Olimpíada Brasileira de Estatística.</p>
-                    <a href="#gabarito" class="bg-white text-[#002855] px-8 py-3 rounded-full font-bold inline-block btn-hover glow-effect mt-auto">
-                        Ver Gabarito da 1ª Fase
+                    <a href="#resultados" class="bg-white text-[#002855] px-8 py-3 rounded-full font-bold inline-block btn-hover glow-effect mt-auto">
+                        Ver Resultados da 1ª Fase
                     </a>
                 </div>
             </div>
@@ -590,16 +593,16 @@
     <div id="thanks-popup" class="fixed inset-0 bg-black bg-opacity-70 z-[100] flex items-center justify-center p-4 opacity-0 invisible transition-opacity duration-300 ease-in-out">
         <div id="popup-content" class="bg-white rounded-xl max-w-xs sm:max-w-sm w-full mx-auto p-6 shadow-2xl relative transform scale-95 transition-all duration-300 ease-in-out">
             <div class="flex flex-col items-center text-center">
-                <div class="bg-green-100 text-green-800 text-xs font-semibold px-3 py-1 rounded-full inline-flex items-center mb-4">
-                    <i class="fas fa-check-circle mr-2"></i>
-                    GABARITO DISPONÍVEL
+                <div class="bg-yellow-100 text-yellow-800 text-xs font-semibold px-3 py-1 rounded-full inline-flex items-center mb-4">
+                    <i class="fas fa-trophy mr-2"></i>
+                    RESULTADOS DIVULGADOS
                 </div>
-                <h3 class="text-xl font-bold text-[#002855] mb-2">Envio de Provas Encerrado!</h3>
+                <h3 class="text-xl font-bold text-[#002855] mb-2">Confira os Classificados!</h3>
                 <p class="text-gray-700 text-sm mb-6">
-                    Confira agora o <strong>gabarito comentado</strong> da 1ª Fase da OBE 2025.
+                    As notas da 1ª Fase já estão disponíveis. Veja a lista oficial de aprovados para a próxima etapa!
                 </p>
-                <a href="#gabarito" id="popup-redirect-btn" class="w-full bg-gradient-to-r from-[#0072CE] to-[#002855] text-white px-5 py-3 rounded-full font-medium btn-hover text-center">
-                    Ver Gabarito Agora
+                <a href="#resultados" id="popup-redirect-btn" class="w-full bg-gradient-to-r from-[#0072CE] to-[#002855] text-white px-5 py-3 rounded-full font-medium btn-hover text-center">
+                    Ver Resultados Agora
                 </a>
             </div>
         </div>
