--- a/segunda_fase.html
+++ b/segunda_fase.html
@@ -140,7 +140,7 @@
                             <p class="mb-4">Meu nome é Florence Claypon, sou doutora em enfermagem e pesquisadora da área de doenças infecciosas. Tenho trabalhado com doenças tropicais e coletei dados de pacientes com dengue, malária e leptospirose de um hospital no Caribe colombiano (2014-2015). A base de dados está organizada e os dados são coesos.</p>
                             <p class="mb-4">Gostaria de entender melhor quais fatores estão relacionados a essas doenças, como elas afetam os pacientes e suas características comuns e distintas. Acredito que selecionei muitas características e preciso de ajuda para filtrar o relevante e tirar conclusões significativas.</p>
                             <p class="mb-4">Sua análise será incluída em um artigo para um público sem grande familiaridade com estatística, então, por favor, considere isso ao produzir seu relatório.</p>
-                            <p>At.te<br>$Dr^{a}$ Florence Claypon.</p>
+                            <p>At.te<br>Dra. Florence Claypon.</p>
                         </blockquote>
                   </div>
                   <div class="max-w-3xl mx-auto mt-8 text-slate-600">
