--- a/segunda_fase.html
+++ b/segunda_fase.html
@@ -101,7 +101,7 @@
              <div class="container mx-auto px-4 sm:px-6">
                  <h2 class="text-3xl md:text-4xl font-bold text-[#002855] mb-8 text-center">Sua Missão: Investigar e Comunicar</h2>
                  <p class="text-lg text-slate-600 max-w-3xl mx-auto mb-8 text-center">
-                     Nesta fase, você explorará o papel da estatística como ferramenta essencial para compreender o mundo e propor soluções baseadas em evidências. O desafio é construir um projeto completo de investigação estatística, envolvendo:
+                     Nesta fase, você irá explorar o papel da estatística como ferramenta essencial para compreender o mundo e propor soluções baseadas em evidências. O desafio é construir um projeto completo de investigação estatística, envolvendo:
                  </p>
                  <div class="max-w-3xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-6 text-slate-700">
                      <div class="bg-slate-50 p-4 rounded-lg border-l-4 border-[#0072CE] flex items-start gap-3">
@@ -200,7 +200,7 @@
                          <div>
                             <h3 class="text-2xl font-semibold text-[#002855] mb-4 border-b-2 border-[#0072CE] pb-2 inline-block">Entrega do Relatório Final</h3>
                             <ul class="list-disc list-inside space-y-3 text-slate-700">
-                                <li><strong>Prazo Final:</strong> <span class="font-bold text-red-600">17 de Novembro de 2025</span></li>
+                                <li><strong>Prazo Final:</strong> <span class="font-bold text-red-600">20 de Novembro de 2025</span></li>
                                 <li><strong>Formato:</strong> Exclusivamente PDF.</li>
                                 <li><strong>Envio:</strong> A escola deve enviar um único e-mail contendo os relatórios de todos os seus grupos.</li>
                                 <li><strong>Destinatário:</strong> <code class="bg-slate-200 px-1 rounded text-sm">ob.estatistica@gmail.com</code></li>
